# neuro-infra

./: .gitleaks.toml  Cargo.toml  Dockerfile  cliff.toml  ns.conf
.github/workflows/: ci.yml  docker.yml  docs-structure.yml  pda-sync.yml  release.yml
docs/: anchoring.md  board_state.json  cli.md  distribution.md  modes.md  networking.md  observability.md  security-checklist.md  security.md  storage.md  sync.md  wp_publish_log.jsonl
helm/neuroswarm/: Chart.yaml  values.yaml
helm/neuroswarm/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/: docker-compose.yml  prometheus.yml
infra/grafana/dashboards/: gateway.json
infra/helm/gateway/: Chart.yaml  values.yaml
infra/helm/gateway/templates/: deployment.yaml
infra/helm/indexer/: Chart.yaml  values.yaml
infra/helm/indexer/templates/: deployment.yaml
infra/helm/monitoring/: Chart.yaml  values.yaml
infra/k8s/: deployment.yaml  rbac.yaml
infra/terraform/: main.tf
scripts/: bootstrap-dev.sh  check-pda-sync.js
src/: anchor.rs  config.rs  index.rs  ipfs.rs  main.rs  network.rs  storage.rs  sync.rs
