[package]
name = "neuroswarm-node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
quinn = "0.10"
rustls = "0.21"
rcgen = "0.11"
futures = "0.3"
tokio-util = "0.7"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"